# awive

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  _water_flow_check.py  index.html  pyproject.toml  run_validation.py  sitemap.xml
.dvc/: config
.github/workflows/: code-quality.yml  python-publish.yml  python-test.yml  tests.yaml
awive/: __main__.py  config.py  correct_image.py  loader.py  otv.py  plots.py  sti.py  video.py
awive/algorithms/: flow_analysis.py  otv.py  sti.py  validate_formula.py  velocimetry.py  water_flow.py  water_level_hist.py
awive/preprocess/: correct_image.py  imageprep.py
awive/tests/: test_config.py
awive/tests/test_algorithms/: test_velocimetry.py  test_water_flow.py
awive/tools/: __init__.py
data/: config.yaml.dvc  video.mp4.dvc
examples/basic/: __main__.py
experiments/: mean.py
features/plots/: index.html
tmp/data_extraction/: extract_validation_columns.py  fetch_thingsboard_data.py
